Fix spacing, styling of add button

--- a/frontend/src/scss/settings.scss
+++ b/frontend/src/scss/settings.scss
@@ -126,6 +126,7 @@
   $skeleton-loader-avatar-width: 100%,
   $stepper-item-opacity: 1,
   $toolbar-title-font-weight: 500,
+  $list-item-title-line-height: 1.2,
   $list-item-icon-margin-start: 20px,
   $list-item-icon-margin-end: 16px
 );
